# CS542-Project

./: Alltoall  Alltoall.cpp  CMakeLists.txt  LocalAlltoall.cpp  LocalAlltoall2.cpp  LocalAlltoall3.cpp  LocalAlltoall_comm.cpp  README.md  a.out  alltoall_bruck.cpp  compile.sh  dontRun  env.sh  env_tau.sh  localAlltoAllDebug.cpp  localAlltoall.sh  localAlltoall_4x4.sh  localAlltoall_4x4_tau.sh  localAlltoall_8x8.sh  localAlltoall_8x8_perf.sh  localAlltoall_8x8_tau.sh  localAlltoall_comm_4x4.sh  plots.ipynb  results_4x4.csv  results_4x4_2.csv  results_4x4_big.csv  results_8x8.csv  results_comm_4x4.csv  slurm-340736.out  slurm-340737.out  slurm-340738.out  slurm-340739.out  slurm-340740.out  slurm-340754.out
archive/: Alltoall_perf.sh  LocalAlltoall2.cpp  LocalAlltoall2_comm.cpp  LocalAlltoall3_comm.cpp  LocalAlltoall_comm.cpp  README.md  localAlltoall_16x16.sh  localAlltoall_4x4_2.sh  localAlltoall_comm_8x8.sh
batch_scripts/: localAlltoall_4x4.sh  localAlltoall_8x8.sh  localAlltoall_8x8_tau.sh
results/: results_4x4_4.csv  results_8x8.csv  results_8x8_big.csv
